# filter-kruskal

./: .bench2.sh.swo  .gitignore  .gitmodules  CMakeLists.txt  args.h  bench.sh  bench2.sh  bench3.sh  bench4.sh  biblio.bib  bucketkruskal.h  build  debug  filterkruskal.h  graph.h  kdtree.h  kruskal.h  main.cpp  mst.cpp  nanoflann.h  pairingheap.h  perfectpartition.cpp  pivot.h  pos.h  prim.h  random.h  randomgraphs.h  samplesort.h  serialize.h  ssssort.h  superkruskal.h  test.cpp  timer.h  unionfind.h  utils.h
relazione/: biblio.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex
src/: filterkruskal.hpp  kruskal.hpp  main.cpp  optimalpivot.hpp  partialmst.hpp  partition.hpp  pivot.hpp  test.cpp  unionfind.hpp
src/graphgen/: kdtree.hpp  pos.hpp  randomgraphs.hpp
src/utils/: base.hpp  graph.hpp  random.hpp
